--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel": "^6.23.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
@@ -28,6 +29,7 @@
     "nconf": "^0.8.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-form": "^1.2.6",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
