--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server.js",
+    "start": "babel-node ./server.js --presets es2015,stage-2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
     "body-parser": "^1.15.2",
     "css-loader": "^0.26.2",
     "express": "^4.14.0",
@@ -39,6 +40,7 @@
     "redux-thunk": "^2.2.0",
     "serve-favicon": "^2.3.2",
     "style-loader": "^0.13.2",
+    "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
