--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "^2.28.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.7.6",
+    "mongoose-unique-validator": "^1.0.4",
     "morgan": "^1.7.0",
     "mpromise": "^0.5.5",
     "nconf": "^0.8.4",
